# ld45-start-with-nothing

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  CollCats.qml  Decoration.qml  Entrance.qml  GameConfig.qml  Player.qml  RectTrigger.qml  Sandbox.qml  SheetOfMusic.qml  Sounding.qml  StageTrigger.qml  Wall.qml  main.cpp  main.qml  res.qrc
src/sound/: sound.qrc
src/visuals/: visuals.qrc
